# bazel-protobuf-pyi-test

./: BUILD.bazel  MODULE.bazel  build_targets.bzl.patch  foo.proto  py_proto_library.bzl.patch
